--- a/src/ClientApp/src/styles.scss
+++ b/src/ClientApp/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #0e1f2d;
+  color: #d9d9d9;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
