--- a/src/ClientApp/src/styles.scss
+++ b/src/ClientApp/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #0e1f2d;
+  background-color: #101315;
   color: #d9d9d9;
 }
 
