--- a/src/ClientApp/src/app/files/files.component.scss
+++ b/src/ClientApp/src/app/files/files.component.scss
@@ -1,13 +1,18 @@
-table {
+.table {
+}
+
+td, th {
+  color: #d9d9d9!important;
+  background-color: inherit;
 }
 
 .radius {
-  border-color: #122e38;
+  border-color: #6b747c;
   border-style: solid;
-  border-width: 0.3rem;
-  border-radius: 0.5rem;
+  border-width: 0.12rem;
+  border-radius: 1rem;
 }
 
-td {
+td, th {
   padding: 0.6rem 0 0.6rem 1rem;
 }
