--- a/src/ClientApp/src/app/files/files.component.html
+++ b/src/ClientApp/src/app/files/files.component.html
@@ -1,20 +1,18 @@
-<script src="files.service.ts"></script>
-<link rel="stylesheet" href="files.component.scss">
 <div class="text-center display-4 mb-4">Files</div>
 
 <div class="p-2 bg-light bg-opacity-10 mb-3">
-  /Projects/GraduationProject/src/ClientApp/src/app/
+  {{path}}
 </div>
 
-<div class="table-responsive">
-  <div class="radius">
+<div class="table-responsive radius">
     <table class="table table-dark table-striped mb-0 p-2">
       <thead class="border-bottom">
       <tr>
-        <th>Name</th>
-        <th>Extension</th>
-        <th>Size</th>
-        <th>Date</th>
+        <th class="col-6">Name</th>
+        <th class="col-1">Extension</th>
+        <th class="col-1">Size</th>
+        <th class="col-2">Date</th>
+        <th class="col-2">Actions</th>
       </tr>
       </thead>
       <tbody>
@@ -25,18 +23,35 @@
         <td></td>
         <td></td>
         <td></td>
+        <td></td>
       </tr>
       <ng-container *ngFor="let file of files">
         <tr>
           <td>
-            <a href="#">{{file.name}}</a>
+            <div class="download" (click)="navigateOrDownload(file)">
+              {{file.name}}
+            </div>
           </td>
           <td>{{file.extension}}</td>
-          <td>{{file.sizeInBytes}}</td>
-          <td>{{file.date}}</td>
+          <td>{{sizeHumanized(file)}}</td>
+          <td>{{file.date | date}}</td>
+          <td></td>
         </tr>
       </ng-container>
       </tbody>
     </table>
+</div>
+
+<div class="row text-center mt-4">
+  <div class="col">
+    <button class="btn btn-secondary w-100" (click)="newFolder()">
+    New Folder
+    </button>
+  </div>
+  <div class="col">
+    <label class="btn btn-secondary w-100">
+      Upload File
+      <input type="file" class="file-upload-input btn btn-secondary" (change)="uploadFile($event)">
+    </label>
   </div>
 </div>
