--- a/src/ClientApp/src/app/sign-up/sign-up.component.html
+++ b/src/ClientApp/src/app/sign-up/sign-up.component.html
@@ -36,7 +36,7 @@
     <div class="row justify-content-center mt-4 mb-1">
       <div class="col-10 col-md-6 col-xl-4">
         <label class="w-100">
-          <button type="submit" class="btn btn-secondary w-100" (click)="login()">
+          <button type="submit" class="btn btn-secondary w-100" (click)="signUp()">
             Sign up
           </button>
           <div *ngIf="errorMessage.length > 0">
